# clonk_transpilation

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  HPCA_artifact.ipynb  HPCA_artifact.md  Makefile  README.md  __init__.py  benchy.ipynb  corral_experiment.ipynb  qiskit_ex1.py  requirements.txt  setup.cfg  setup.py
NuOp/: Decomposing two-qubit and multi-qubit unitaries with NuOp.ipynb  gates_numpy.py
backend_utils/: backend_analysis_main.ipynb  backend_analysis_pass.py  configurable_backend_v2.py  test.ipynb
benchmark_suite/: backend_suite.py  backend_suite_v2.py  backend_suite_v3.py  circuit_suite.py  dag_visualization.ipynb  ibm_test.ipynb  latex_main.ipynb  main.ipynb  nuop_main.ipynb  qft_debug.ipynb  weighted_weyl_plot.ipynb  weyl_nuop.ipynb
brute_force_pass/: circuit_ir.py  equivalence_library.py  hash_unitary.ipynb  transpile_runner.ipynb
decomp_analysis/: __init__.py  cost_analysis_example.ipynb  non_global_pass_tests.ipynb  pass_manager.ipynb  pass_manager_v2.py  pinlei_virtualz.ipynb
example_basischange/: rootiswapkak.ipynb  swap_family_decomp.ipynb
fakeutils/: __init__.py  basis_translator.py  configurable_backend_v2.py  equivalence_library.py  fakeutils.py  gate_map.py  nonglobal_swap.py  nonglobal_trivial_layout.py  two_qubit_decompose.py  weyl.py  weyl_decompose.py
mock_backend/: __init__.py  fake_example.py  fake_hatlab.py  fake_hypercube.py  fake_surfaceCode.py  test.ipynb
non_global_pass/: QFT_testbench.ipynb  cutom_pass.ipynb
unitary_experiments/: Untitled-1.py  decomp_experiment.ipynb  parameter_search.ipynb  symbolic_eval.ipynb  (+2 more)
(+475 files in other folders)
