[metadata]
name = clonk
description = HPCA 2023 Co-Designed Architectures for Modular Superconducting Quantum Computers
version = 0.1.0
author = Evan McKinney
# author_email =

[options]
python_requires = >=3.9
install_requires =
    qiskit==0.36.2
    pydot
    Pillow
    retworkx
    tqdm
    supermarq
    SciencePlots

[options.extras_require]
dev =
    ipykernel
    pre-commit
    pylatexenc
format =
    pre-commit
    black[jupyter]
    isort
    tomli
    pydocstyle
    ruff
    docformatter[tomli]
test =
    pytest
